--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,10 +4,11 @@
     "module": "CommonJS",
     "allowJs": true,
     "checkJs": false,
+    "noEmit": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-    "include": []
-    
+  "include": ["**/*.js"],
+  "exclude": ["node_modules", "dist"]
 }
